--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 
 <body>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-80456305-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
   <div class="table-title">
     <input type="text" class="repos" value="github/gitignore" />
     <h3>vs</h3>
@@ -37,9 +47,7 @@
       <th></th>
       <th></th>
       <th></th>
-      <th></th>
-      <th></th>
-      <th>github.com/erayalakese/github-repo-compare-tool</th>
+      <th colspan="3">http://eray.rocks/github-repo-compare-tool/</th>
     </tfoot>
   </table>
 
